# library-management

./: .gitignore  README.md  SRS.md  docker-compose.yml  render.yaml  start.sh
backend/: .env.example  .gitignore  Cargo.toml  schema.sql
backend/src/: auth.rs  db.rs  main.rs  middleware.rs  models.rs  realtime.rs
backend/src/handlers/: auth.rs  books.rs  borrow.rs  categories.rs  interests.rs  members.rs  mod.rs  reservations.rs  wallet.rs
frontend/: angular.json  package-lock.json  package.json  vercel.json
frontend/src/: index.html  styles.css
frontend/src/app/: app.config.ts  app.routes.ts  app.ts
frontend/src/app/components/shared/loading/: loading.component.ts
frontend/src/app/components/shared/navbar/: navbar.component.ts
frontend/src/app/guards/: auth.guard.ts
frontend/src/app/interceptors/: auth.interceptor.ts  error.interceptor.ts  loading.interceptor.ts
frontend/src/app/models/: index.ts
frontend/src/app/pages/admin/: admin-borrows.component.ts  admin-inventory.component.ts  admin-users.component.ts
frontend/src/app/pages/book-detail/: book-detail.component.ts
frontend/src/app/pages/books/: books.component.ts
frontend/src/app/pages/categories/: categories.component.ts
frontend/src/app/pages/errors/not-found/: not-found.component.ts
frontend/src/app/pages/errors/server-error/: server-error.component.ts
frontend/src/app/pages/home/: home.component.ts
frontend/src/app/pages/interests/: interests.component.ts
frontend/src/app/pages/login/: login.component.ts
frontend/src/app/pages/payment/: payment.component.ts
frontend/src/app/pages/profile/: profile.component.ts
frontend/src/app/pages/recommendations/: recommendations.component.ts
frontend/src/app/pages/register/: register.component.ts
frontend/src/app/pages/wallet/: wallet.component.ts
frontend/src/app/pipes/: translate.pipe.ts
frontend/src/app/services/: auth.service.ts  book.service.ts  category.service.ts  interest.service.ts  language.service.ts  loading.service.ts  realtime.service.ts  theme.service.ts  wallet.service.ts
frontend/src/environments/: environment.prod.ts  environment.ts
pgadmin/: servers.json
