[package]
name = "library-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "library-backend"
path = "src/main.rs"

[dependencies]
actix-web = "=4.9.0"
actix-http = "=3.9.0"
actix-cors = "=0.7.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "=0.7.3", features = [ "runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid" ] }
bcrypt = "0.15"
jsonwebtoken = "9"
serde_urlencoded = "0.7.1"
time = "=0.3.36"
getrandom = "=0.2.15"
uuid = { version = "=1.10.0", features = ["v4"] }
rand = "=0.8.5"
rand_core = "=0.6.4"
tempfile = "=3.10.1"
ahash = "=0.8.11"
hashbrown = "=0.14.3"
chrono = { version = "0.4.38", features = ["serde"] }
tokio = { version = "1.38.0", features = ["full"] }
env_logger = "0.11"
log = "0.4"
dotenv = "0.15"
actix-ws = "=0.3.0"
tokio-stream = "0.1.18"
jobserver = "=0.1.32"
home = "=0.5.9"
base64ct = "=1.6.0"
futures-util = "0.3.32"
